--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
     "df = df_cases[['intraop_uo', 'intraop_rbc', 'intraop_ffp', 'intraop_crystalloid',\n",
     "               'intraop_colloid', 'intraop_ppf', 'intraop_mdz', 'intraop_ftn',\n",
     "               'intraop_rocu', 'intraop_vecu', 'intraop_eph', 'intraop_phe',\n",
-    "               'intraop_epi', 'intraop_ca', 'icu_days', 'approach', 'ane_type',\n",
+    "               'intraop_epi', 'intraop_ca', 'intraop_ebl','icu_days', 'approach', 'ane_type',\n",
     "               'casestart', 'caseend']]\n",
     "\n",
     "df.to_json('health_data', orient = 'records')\n"
