--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
     "               'intraop_colloid', 'intraop_ppf', 'intraop_mdz', 'intraop_ftn',\n",
     "               'intraop_rocu', 'intraop_vecu', 'intraop_eph', 'intraop_phe',\n",
     "               'intraop_epi', 'intraop_ca', 'intraop_ebl','icu_days', 'approach', 'ane_type',\n",
-    "               'casestart', 'caseend']]\n",
+    "               'casestart', 'caseend', 'sex']]\n",
     "\n",
     "df.to_json('health_data', orient = 'records')\n"
    ]
